refactor: padronizado relatórios e testes relacionados